# orbitkeys

./: Cargo.toml  install.sh  orbitkeys.desktop  readme.md  uninstall.sh
shortcuts/: chromium.json  code.json  cosmic-desktop.json  cosmic-edit.json  cosmic-files.json  cosmic-terminal.json  discord.json  firefox.json  gimp.json  goose.json  inkscape.json  libreoffice-calc.json  libreoffice-draw.json  libreoffice-impress.json  libreoffice-writer.json  obs.json  obsidian.json  slack.json  spotify.json  thunderbird.json  vlc.json
src/: focus_watcher.rs  key_format.rs  key_glyphs.rs  main.rs  shortcut_resolver.rs  ui.rs
